add bootstrap dependency

--- a/banking-gateway-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/banking-gateway-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -1,1 +1,8 @@
-<p>bank-search works!</p>
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="https://picsum.photos/id/558/200/200" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
