* add stubs to banks search service * display banks in bank-search component

--- a/banking-gateway-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/banking-gateway-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -1,8 +1,15 @@
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="https://picsum.photos/id/558/200/200" alt="Card image cap">
+<div class="card" style="width: 26rem;">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="form-group">
+      <span class="fa fa-search form-control-feedback"></span>
+      <input type="search" class="form-control" placeholder="Search your bank">
+    </div>
+
+    <div class="list-group">
+      <button *ngFor="let bank of searchedBanks"
+        type="button"
+        class="list-group-item list-group-item-action">{{bank.name}}</button>
+    </div>
   </div>
+
 </div>
