--- a/banking-gateway-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/banking-gateway-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="form-group">
       <span class="fa fa-search form-control-feedback"></span>
-      <input type="search" class="form-control" placeholder="Search your bank">
+      <input (input)="onSearch($event.target.value)" type="search" class="form-control" placeholder="Search your bank">
     </div>
 
     <div class="list-group">
