--- a/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.scss
+++ b/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.scss
@@ -3,9 +3,10 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    background-color: #EDF4F7;
 
     .card {
-        min-height: 40vh;
+        min-height: 300px;
         border: 0;
         box-shadow: 0 5px 10px rgba(0,0,0,0.19), 0 3px 3px rgba(0,0,0,0.23);
     }
