add extra data to bank search service

--- a/fintech-ui/src/app/bank-search/common/search/search.component.html
+++ b/fintech-ui/src/app/bank-search/common/search/search.component.html
@@ -3,6 +3,7 @@
     <input (input)="onSearch($event.target.value)"
            name="searchValue"
            type="text"
+           autocomplete="off"
            placeholder="Search for your bank"
            class="form-control border-3">
 </form>
