--- a/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -1,16 +1,24 @@
 <div class="box-container">
   <div class="box-item mx-4">
     <h4 class="box-header__title">Please search your bank</h4>
-    <p class="box-header_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr sed diam nonumy eirmod tempor invidunt  </p>
+    <p class="box-header_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr sed diam nonumy eirmod tempor
+      invidunt </p>
   </div>
   <div class="card box-item mr-4 w-100">
     <div class="card-body">
       <app-search (keyword)="onSearch($event)"></app-search>
-      <div class="list-group border-0">
-        <button *ngFor="let bank of searchedBanks"
-                type="button"
-                class="list-group-item list-group-item-action border-0">{{bank.name}}</button>
-      </div>
+
+      <ng-template [ngIf]="loading" [ngIfElse]="ready">
+        <div>Loading...</div>
+      </ng-template>
+
+      <ng-template #ready>
+        <div class="list-group border-0">
+          <button *ngFor="let bank of searchedBanks"
+                  type="button"
+                  class="list-group-item list-group-item-action border-0">{{bank.name}}</button>
+        </div>
+      </ng-template>
     </div>
   </div>
 </div>
