--- a/fintech-ui/src/app/bank-search/common/search/search.component.html
+++ b/fintech-ui/src/app/bank-search/common/search/search.component.html
@@ -1,7 +1,8 @@
 <form class="search">
   <i class="fa fa-search form-control-feedback"></i>
   <input
-    (input)="onSearch($event.target.value)"
+    (keyup)="searchTerm$.next($event.target.value)"
+    autocomplete="off"
     name="searchValue"
     type="text"
     placeholder="Search for your bank"
