OBG-85. Implemented dynamic parameter form update

--- a/core/banking-protocol/src/main/resources/tpp-ui/src/app/parameters-input/parameters-input.component.html
+++ b/core/banking-protocol/src/main/resources/tpp-ui/src/app/parameters-input/parameters-input.component.html
@@ -1,1 +1,1 @@
-<dynamic-form [controlTemplates]="inputs"></dynamic-form>
+<dynamic-form [submissionUri]="submissionUri" [controlTemplates]="inputs"></dynamic-form>
