--- a/core/banking-protocol/src/main/resources/tpp-ui/src/app/dynamic-form/dynamic.form.control.component.html
+++ b/core/banking-protocol/src/main/resources/tpp-ui/src/app/dynamic-form/dynamic.form.control.component.html
@@ -1,16 +1,16 @@
 <div [formGroup]="form">
-  <label [attr.for]="control.code">{{control.message}}</label>
+  <label [attr.for]="control.id">{{control.message}}</label>
 
   <div [ngSwitch]="control.controlType">
 
-    <input *ngSwitchCase="'textbox'" [formControlName]="control.code"
-           [id]="control.message" [type]="control.type">
+    <input *ngSwitchCase="'textbox'" [formControlName]="control.id"
+           [id]="control.id" [type]="control.type">
 
-    <select [id]="control.code" *ngSwitchCase="'dropdown'" [formControlName]="control.code">
+    <select [id]="control.id" *ngSwitchCase="'dropdown'" [formControlName]="control.id">
       <option *ngFor="let opt of control.options" [value]="opt.key">{{opt.value}}</option>
     </select>
 
   </div>
 
-  <div class="errorMessage" *ngIf="!isValid">{{control.code}} is required</div>
+  <div class="errorMessage" *ngIf="!isValid">{{control.id}} is required</div>
 </div>
