--- a/core/banking-protocol/src/main/resources/tpp-ui/src/app/dynamic-form/dynamic.form.component.html
+++ b/core/banking-protocol/src/main/resources/tpp-ui/src/app/dynamic-form/dynamic.form.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form (ngSubmit)="onSubmit()" [formGroup]="form">
+  <form ngNoForm method="post" action="{{submissionUri}}">
 
     <div *ngFor="let template of controlTemplates" class="form-row">
       <dynamic-form-control [control]="template" [form]="form"></dynamic-form-control>
