--- a/core/banking-protocol/src/main/resources/tpp-ui/src/app/select-sca-method/select-sca-method.component.html
+++ b/core/banking-protocol/src/main/resources/tpp-ui/src/app/select-sca-method/select-sca-method.component.html
@@ -1,8 +1,8 @@
 <div>
   <form ngNoForm method="post" action="{{submissionUri}}">
 
-    <label for="scaMethod">Select SCA method</label>
-    <select id="scaMethod" name="scaMethod">
+    <label for="scaMethodId">Select SCA method</label>
+    <select id="scaMethodId" name="scaMethodId">
       <option *ngFor="let method of methods" [value]="method.key">{{method.value}}</option>
     </select>
 
