--- a/core/banking-protocol/src/main/resources/tpp-ui/src/app/dynamic-form/dynamic-form.component.html
+++ b/core/banking-protocol/src/main/resources/tpp-ui/src/app/dynamic-form/dynamic-form.component.html
@@ -1,3 +1,4 @@
+<script src="../account-selector/account-selector.component.ts"></script>
 <div>
   <form ngNoForm method="post" action="{{submissionUri}}">
 
