OBG-85. Expanded JSON and form handling

--- a/core/banking-protocol/src/main/resources/tpp-ui/src/app/account-reference-selector/account-reference.component.html
+++ b/core/banking-protocol/src/main/resources/tpp-ui/src/app/account-reference-selector/account-reference.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <mat-form-field>
-    <input matInput placeholder="Account IBAN" [formControl]="iban"/>
+    <input matInput placeholder="Account IBAN" [formControl]="iban" name="{{prefix}}iban"/>
   </mat-form-field>
   <mat-form-field>
-    <input matInput placeholder="Account currency" [formControl]="currency"/>
+    <input matInput placeholder="Account currency" [formControl]="currency" name="{{prefix}}currency"/>
   </mat-form-field>
 </div>
