--- a/fintech-ui/src/app/login/login.component.html
+++ b/fintech-ui/src/app/login/login.component.html
@@ -5,7 +5,7 @@
       <div class="form__margin">
         <div class="form-group">
           <input
-            [ngClass]="{ 'is-invalid': loginForm.get('username')?.errors && loginForm.get('username')?.dirty }"
+            [ngClass]="{ 'is-invalid': username?.errors && username?.dirty }"
             autocomplete="off"
             placeholder="Username"
             class="form-control"
@@ -13,17 +13,14 @@
             id="username"
             type="text"
           />
-          <div
-            *ngIf="loginForm.get('username')?.errors?.required && loginForm.get('username')?.dirty"
-            class="invalid-feedback"
-          >
+          <div *ngIf="username?.errors?.required && username?.dirty" class="invalid-feedback">
             Username is Required
           </div>
         </div>
 
         <div class="form-group">
           <input
-            [ngClass]="{ 'is-invalid': loginForm.get('password')?.errors && loginForm.get('password')?.dirty }"
+            [ngClass]="{ 'is-invalid': password?.errors && password?.dirty }"
             autocomplete="off"
             placeholder="Password"
             class="form-control"
@@ -31,10 +28,7 @@
             id="password"
             type="password"
           />
-          <div
-            *ngIf="loginForm.get('password')?.errors?.required && loginForm.get('password')?.dirty"
-            class="invalid-feedback"
-          >
+          <div *ngIf="password?.errors?.required && password?.dirty" class="invalid-feedback">
             Password is Required
           </div>
         </div>
