--- a/fintech-ui/src/styles.scss
+++ b/fintech-ui/src/styles.scss
@@ -4,3 +4,15 @@
   padding: 0;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
+
+.card {
+  max-width: 400px;
+  min-height: 300px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  color: #2c2e2f;
+}
+
+.form-control,
+.btn {
+  height: 44px;
+}
