Bind fintech-ui with fintech-api, implement login and adapt bankSearch logic

--- a/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -5,8 +5,8 @@
         <h4 class="card-title">Search your bank</h4>
         <app-search (keyword)="onSearch($event)"></app-search>
         <div class="scrollable">
-          <button (click)="onBankSelect(bank.id)" *ngFor="let bank of cardList" class="bank-list" type="button">
-            {{ bank.headline }}
+          <button (click)="onBankSelect(bank.uuid)" *ngFor="let bank of searchedBanks" class="bank-list" type="button">
+            {{ bank.bankName }}
           </button>
         </div>
       </div>
