implement new Design (login, bankSearch) of fintech UI

--- a/fintech-examples/fintech-ui/src/app/bank-search/common/search/search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/common/search/search.component.html
@@ -5,7 +5,7 @@
     autocomplete="off"
     name="searchValue"
     type="text"
-    placeholder="Search for your bank"
-    class="form-control border-3"
+    class="form-control"
+    placeholder="Search"
   />
 </div>
