--- a/fintech-examples/fintech-ui/src/styles.scss
+++ b/fintech-examples/fintech-ui/src/styles.scss
@@ -1,18 +1,65 @@
+@import './assets/themes/variables';
+
 @import '~bootstrap/scss/bootstrap';
+
 * {
   margin: 0;
   padding: 0;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
+body {
+  background-color: var(--main-BG);
+}
+
 .card {
-  max-width: 400px;
-  min-height: 300px;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 16px;
+  //box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   color: #2c2e2f;
+
+  &-frame {
+    margin: 120px auto 0;
+    max-width: 450px;
+    min-height: 400px;
+  }
+
+  &-body {
+    padding: 4rem;
+  }
+
+  &-title {
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 1.8rem;
+  }
+}
+
+.form__margin {
+  margin-bottom: 2rem;
+}
+
+// TODO: make this config in _bootstrap file
+label {
+  margin-bottom: 0;
+  color: $primary;
+  font-size: 0.85rem;
 }
 
 .form-control,
 .btn {
   height: 44px;
+  border: none;
+}
+
+.form-control,
+.form-control:focus {
+  border-radius: 0;
+  background-color: $form-control;
+}
+
+.btn {
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  align-content: center;
 }
