start dashboard implementation

--- a/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -9,7 +9,7 @@
             {{ bank }}
           </button>
         </div>
-        <button class="btn btn-primary btn-block" type="submit">Next</button>
+        <button class="btn btn-primary btn-center btn-block" type="submit">Next</button>
       </div>
     </div>
   </ng-template>
