--- a/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.scss
+++ b/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.scss
@@ -20,8 +20,8 @@
   }
 
   &:hover {
-    background-color: $form-control;
-    border-color: $form-control;
+    background-color: $primary-30;
+    border-color: $primary-30;
     transition: 0.2s ease-in-out;
   }
 }
