--- a/fintech-examples/fintech-ui/src/app/login/login.component.html
+++ b/fintech-examples/fintech-ui/src/app/login/login.component.html
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-primary btn-block mb-3" type="submit">Login</button>
+      <button class="btn btn-primary btn-center btn-block mb-3" type="submit">Login</button>
     </div>
   </div>
 </form>
