--- a/fintech-examples/fintech-ui/src/assets/themes/_variables.scss
+++ b/fintech-examples/fintech-ui/src/assets/themes/_variables.scss
@@ -2,6 +2,9 @@ $primary: #687aa8;
 $primary-10: #f7f8fb;
 $primary-30: #e7f0fd;
 
+$dark-80: #212121;
+$grey: #4d4d4d;
+
 :root {
   /*Main*/
   --main-BG: #{$primary-10};
