redirect to dashboard on select bank

--- a/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -13,11 +13,11 @@
     </div>
   </ng-template>
 
-  <ng-template #profile>
-    <div class="card box-item mr-4 w-100">
-      <div class="card-body">
-        <app-profile [bankId]="selectedBank" (bankUnselect)="bankUnselect()"></app-profile>
-      </div>
-    </div>
-  </ng-template>
+  <!--  <ng-template #profile>-->
+  <!--    <div class="card box-item mr-4 w-100">-->
+  <!--      <div class="card-body">-->
+  <!--        <app-profile [bankId]="selectedBank" (bankUnselect)="bankUnselect()"></app-profile>-->
+  <!--      </div>-->
+  <!--    </div>-->
+  <!--  </ng-template>-->
 </div>
