--- a/fintech-examples/fintech-ui/src/app/common/sidebar/sidebar.component.html
+++ b/fintech-examples/fintech-ui/src/app/common/sidebar/sidebar.component.html
@@ -2,19 +2,25 @@
   <ul class="nav flex-md-column">
     <li class="nav-item">
       <a [routerLinkActive]="['active']" [routerLink]="['/']" class="nav-link ">
-        <div class="icon__container"></div>
+        <div class="icon__container">
+          <img alt="bank_cards" class="text-primary" src="assets/icons/icons8-bank_cards.svg" />
+        </div>
         <span class="nav__title">Accounts</span>
       </a>
     </li>
     <li class="nav-item">
       <a [routerLinkActive]="['active']" [routerLink]="['/']" class="nav-link ">
-        <div class="icon__container"></div>
+        <div class="icon__container">
+          <img alt="transfert" class="text-primary" src="assets/icons/icons8-sent.svg" />
+        </div>
         <span class="nav__title">Transfert</span>
       </a>
     </li>
     <li class="nav-item">
       <a [routerLinkActive]="['active']" [routerLink]="['/']" class="nav-link">
-        <div class="icon__container"></div>
+        <div class="icon__container">
+          <img alt="settings" class="text-primary" src="assets/icons/icons8-maintenance.svg" />
+        </div>
         <span class="nav__title">Setting</span>
       </a>
     </li>
