--- a/fintech-examples/fintech-ui/src/app/bank-search/common/search/search.component.scss
+++ b/fintech-examples/fintech-ui/src/app/bank-search/common/search/search.component.scss
@@ -16,7 +16,7 @@
     display: block;
     width: 2.375rem;
     height: 2.375rem;
-    padding-top: 18px;
+    padding-top: 0.9rem;
     text-align: center;
     pointer-events: none;
     color: $primary;
