--- a/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -2,7 +2,7 @@
   <ng-template [ngIf]="!selectedBank" [ngIfElse]="profile">
     <div class="card card-frame">
       <div class="card-body">
-        <h4 class="card-title">Search your bank!</h4>
+        <h4 class="card-title">Search your bank</h4>
         <app-search (keyword)="onSearch($event)"></app-search>
         <div class="scrollable">
           <button (click)="onBankSelect(bank.id)" *ngFor="let bank of cardList" class="bank-list" type="button">
