fintech-ui: fix some issues regarding authorization (use withCredentials flag and autologin on 401 request)

--- a/fintech-examples/fintech-ui/src/app/bank-search/common/profile/profile.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/common/profile/profile.component.html
@@ -3,7 +3,7 @@
     <i (click)="goBack()" class="fa fa-angle-left"></i>
   </div>
   <div class="col">
-    <h4>{{ profile?.bank.name }}</h4>
+    <h4>{{ profile?.bank.bankName }}</h4>
   </div>
 </div>
 
