--- a/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -1,17 +1,17 @@
 <div class="box-container">
-  <ng-template [ngIf]="!selectedBank" [ngIfElse]="profile">
-    <div class="card card-frame">
-      <div class="card-body">
-        <h4 class="card-title">Search your bank</h4>
-        <app-search (keyword)="onSearch($event)"></app-search>
-        <div class="scrollable">
-          <button (click)="onBankSelect(bank.uuid)" *ngFor="let bank of searchedBanks" class="bank-list" type="button">
-            {{ bank.bankName }}
-          </button>
-        </div>
+  <!--  <ng-template [ngIf]="!selectedBank" [ngIfElse]="profile">-->
+  <div class="card card-frame">
+    <div class="card-body">
+      <h4 class="card-title">Search your bank</h4>
+      <app-search (keyword)="onSearch($event)"></app-search>
+      <div class="scrollable">
+        <button (click)="onBankSelect(bank.uuid)" *ngFor="let bank of searchedBanks" class="bank-list" type="button">
+          {{ bank.bankName }}
+        </button>
       </div>
     </div>
-  </ng-template>
+  </div>
+  <!--  </ng-template>-->
 
   <!--  <ng-template #profile>-->
   <!--    <div class="card box-item mr-4 w-100">-->
