fintech-ui: connect current ui with account list backend endpoints

--- a/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
+++ b/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-5">
+<div class="row mt-5" *ngIf="cardList2 && cardList2.length">
   <div *ngFor="let card of cardList2" class="col">
     <app-list-item [card]="card" [config]="config"></app-list-item>
   </div>
