--- a/technical-embedded-ui/tpp-ui/src/app/account-selector/account-selector.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/account-selector/account-selector.component.html
@@ -11,7 +11,7 @@ Choose account access
         <button mat-icon-button type="button" (click)="removeAccount(accountReference)">
           <mat-icon>remove_circle</mat-icon>
         </button>
-        <app-account-reference #accountReference elemId="{{template.elemId}}" prefix="consent.access.accounts[{{i}}]."></app-account-reference>
+        <app-account-reference #accountReference elemId="{{template.elemId}}" prefix="consent.access.accounts[{{i}}]." [form]="form"></app-account-reference>
       </div>
       <button mat-icon-button type="button" (click)="addAccount()" >
         <mat-icon>add_circle</mat-icon>
@@ -24,7 +24,7 @@ Choose account access
         <button mat-icon-button type="button" (click)="removeBalance(balanceReference)">
           <mat-icon>remove_circle</mat-icon>
         </button>
-        <app-account-reference #balanceReference elemId="{{template.elemId}}" prefix="consent.access.balances[{{i}}]."></app-account-reference>
+        <app-account-reference #balanceReference elemId="{{template.elemId}}" prefix="consent.access.balances[{{i}}]." [form]="form"></app-account-reference>
       </div>
       <button mat-icon-button type="button" (click)="addBalance()">
         <mat-icon>add_circle</mat-icon>
@@ -37,7 +37,7 @@ Choose account access
         <button mat-icon-button type="button" (click)="removeTransaction(txReference)">
           <mat-icon>remove_circle</mat-icon>
         </button>
-        <app-account-reference #txReference elemId="{{template.elemId}}" prefix="consent.access.transactions[{{i}}]."></app-account-reference>
+        <app-account-reference #txReference elemId="{{template.elemId}}" prefix="consent.access.transactions[{{i}}]." [form]="form"></app-account-reference>
       </div>
       <button mat-icon-button type="button" (click)="addTransaction()">
         <mat-icon>add_circle</mat-icon>
@@ -46,7 +46,7 @@ Choose account access
   </div>
   <div>
     <mat-radio-button #all class="account-radio-button" value="all">All accounts access</mat-radio-button>
-    <mat-radio-group class="account-radio-group nested" name="consent.access.availableAccounts" [disabled]="!all.checked">
+    <mat-radio-group class="account-radio-group nested" [disabled]="!all.checked" [formControl]="allAccounts">
       <mat-radio-button value="allAccounts">All accounts</mat-radio-button>
       <mat-radio-button value="allAccountsWithBalances">All accounts with balances</mat-radio-button>
     </mat-radio-group>
