--- a/technical-embedded-ui/tpp-ui/src/app/three-state-checkbox/three-state-checkbox.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/three-state-checkbox/three-state-checkbox.component.html
@@ -1,8 +1,9 @@
 <mat-checkbox
+              [formControl]="checkbox"
               [ngModel]="state"
               [indeterminate]="state === null"
               [checked]="state"
-              (change)="state = tape[(tape.indexOf(state) + 1) % tape.length]">
+              (change)="state = tape[(tape.indexOf(state) + 1) % tape.length];">
   {{label}}
 </mat-checkbox>
 <input type="hidden" name="{{controlName}}" value="{{state}}">
