OBG-194. Embedded consent retrieval now works too

--- a/technical-embedded-ui/tpp-ui/src/app/provide-psu-password/provide-psu-password.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/provide-psu-password/provide-psu-password.component.html
@@ -2,10 +2,10 @@
   <form ngNoForm method="post" action="{{submissionUri}}">
 
     <label for="psuPassword">PSU password/OTP</label>
-    <input id="psuPassword" name="psuPassword" type="password">
+    <input id="psuPassword" name="psuPassword" type="password" [formControl]="psuPassword">
 
     <div class="form-row">
-      <button type="submit" [disabled]="!form.valid">Save</button>
+      <button type="button" [disabled]="!form.valid" (click)="save()">Save</button>
     </div>
   </form>
 </div>
