--- a/technical-embedded-ui/tpp-ui/src/app/select-sca-method/select-sca-method.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/select-sca-method/select-sca-method.component.html
@@ -2,12 +2,12 @@
   <form ngNoForm method="post" action="{{submissionUri}}">
 
     <label for="scaMethodId">Select SCA method</label>
-    <select id="scaMethodId" name="scaMethodId">
+    <select id="scaMethodId" name="scaMethodId" [formControl]="scaMethod">
       <option *ngFor="let method of methods" [value]="method.key">{{method.value}}</option>
     </select>
 
     <div class="form-row">
-      <button type="submit" [disabled]="!form.valid">Save</button>
+      <button type="button" [disabled]="!form.valid" (click)="save()">Save</button>
     </div>
   </form>
 </div>
