--- a/technical-embedded-ui/tpp-ui/src/app/report-sca-result/report-sca-result.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/report-sca-result/report-sca-result.component.html
@@ -2,10 +2,10 @@
   <form ngNoForm method="post" action="{{submissionUri}}">
 
     <label for="scaChallengeResult">SCA challenge result for: <br> {{label}}</label>
-    <input id="scaChallengeResult" name="scaChallengeResult" type="password">
+    <input id="scaChallengeResult" name="scaChallengeResult" type="password" [formControl]="scaResult">
 
     <div class="form-row">
-      <button type="submit" [disabled]="!form.valid">Save</button>
+      <button type="button" [disabled]="!form.valid" (click)="save()">Save</button>
     </div>
   </form>
 </div>
