--- a/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
+++ b/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-5" *ngIf="cardList2 && cardList2.length">
-  <div *ngFor="let card of cardList2" class="col">
+  <div *ngFor="let card of cardList2" class="col mb-2">
     <app-list-item [card]="card" [config]="config"></app-list-item>
   </div>
 </div>
