--- a/fintech-examples/fintech-ui/src/app/common/list-item/list-item.component.html
+++ b/fintech-examples/fintech-ui/src/app/common/list-item/list-item.component.html
@@ -1,24 +1,9 @@
-<div class="box-container">
-  <ng-template [ngIfElse]="search" [ngIf]="!bankSearch">
-    <div class="list-item list-item--{{ config?.shadow }}">
-      <div class="row align-items-center justify-content-between px-3">
-        <div class="d-inline-block">
-          <h3 class="list-item__headline list-item__headline--{{ config?.headline }}">{{ card?.headline }}</h3>
-          <h4 class="list-item__subheadline list-item__subheadline--{{ config?.subheadline }}">
-            {{ card?.subheadline }}
-          </h4>
-        </div>
-        <div *ngIf="card?.accountBalance" class="list-item__balance text-right">
-          <span [class.text-danger]="card?.accountBalance < 0">{{
-            card.accountBalance | currency: 'EUR':'symbol':'1.0'
-          }}</span>
-        </div>
-      </div>
-    </div>
-  </ng-template>
-  <ng-template #search>
-    <div class="list-item">
-      <span class="list-item__subheadline">{{ card?.headline }}</span>
-    </div>
-  </ng-template>
+<div class="list-container list-container--{{ config?.shadow }}">
+  <div class="list-item">
+    <h1 class="list-item__headline list-item__headline--{{ config?.headline }}">{{ card?.headline }}</h1>
+    <p class="list-item__subheadline list-item__subheadline--{{ config?.subheadline }}">{{ card?.subheadline }}</p>
+  </div>
+  <div *ngIf="card?.accountBalance" [class.text-danger]="card?.accountBalance < 0" class="list-item list-item__balance">
+    {{ card.accountBalance | currency: 'EUR':'symbol':'1.0' }}
+  </div>
 </div>
