--- a/fintech-examples/fintech-ui/src/assets/themes/_variables.scss
+++ b/fintech-examples/fintech-ui/src/assets/themes/_variables.scss
@@ -8,6 +8,10 @@ $primary-30: #e5ecfe;
 $dark-80: #21242c;
 $grey: #4d4d4d;
 
+%layout-padding {
+  padding: 0.75rem 1.25rem;
+}
+
 :root {
   /*Main*/
   --main-BG: #{$primary-10};
