OBG-262. Demo UI and minor fixes

--- a/technical-embedded-ui/tpp-ui/src/app/dynamic-form/dynamic-form.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/dynamic-form/dynamic-form.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="form-row">
-      <button type="button" [disabled]="!form.valid" (click)="save()">Save</button>
+      <button type="button" [disabled]="!form.valid" (click)="save()">Supply parameters to embedded authorization</button>
     </div>
   </form>
 </div>
