--- a/technical-embedded-ui/tpp-ui/src/app/parameters-input/parameters-input.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/parameters-input/parameters-input.component.html
@@ -1,1 +1,9 @@
+<h1>TPP asks user to provide data necessary to authorize his request within EMBEDDED authorization</h1>
+<h2>In case of successful authorization user is REDIRECT'ed to ASPSP for further authorization</h2>
+
 <dynamic-form [submissionUri]="submissionUri" [controlTemplates]="inputs"></dynamic-form>
+
+<br/>
+<a href="assets/docs/rendered/flow.svg">Link to entire end-to-end flow</a>
+<h2>What happens in backend during this request</h2>
+<img src="assets/docs/rendered/embedded.svg" width="1920px"/>
