--- a/fintech-examples/fintech-ui/src/app/bank-search/components/redirect-page/redirect-page.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/components/redirect-page/redirect-page.component.html
@@ -1,1 +1,1 @@
-<app-redirect-card></app-redirect-card>
+<app-redirect-card (cancelRedirect)="cancel()" (proceedRedirect)="proceed()"></app-redirect-card>
