--- a/fintech-examples/fintech-ui/src/app/common/redirect-card/redirect-card.component.html
+++ b/fintech-examples/fintech-ui/src/app/common/redirect-card/redirect-card.component.html
@@ -1,12 +1,13 @@
 <div class="card card-frame">
+  <div class="d-flex justify-content-center mt-5">
+    <img alt="redirection" class="card-img" src="assets/icons/icons8-network 2.png" />
+  </div>
   <div class="card-body">
-    <h4 class="card-title">Redirecting to your bank</h4>
-    <p class="card-text text-justify">
-      We are about to redirect you to your bank. Please proceed or cancel this operation
-    </p>
-    <div class="d-flex flex-column-reverse flex-md-row">
-      <button (click)="cancel()" class="btn btn-danger flex-fill my-1 mr-md-2">Cancel</button>
-      <button (click)="proceed()" class="btn btn-primary flex-fill my-1 ml-md-2">Proceed</button>
+    <h4 class="card-title">Redirection</h4>
+    <p class="card-text text-center">Now we connect your {{ bankName }} bank account</p>
+    <div class="d-flex flex-column mt-3">
+      <button (click)="proceed()" class="btn btn-primary btn-center">Ok</button>
+      <button (click)="cancel()" class="btn btn-link btn-center">Cancel</button>
     </div>
   </div>
 </div>
