OBG-282. Added some fixes to logic

--- a/technical-embedded-ui/tpp-ui/src/app/initial-request/initial-request.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/initial-request/initial-request.component.html
@@ -18,6 +18,10 @@
     <input id="authorization" name="authorization" type="text" [formControl]="authorization">
 
     <br/>
+    <label for="serviceSessionPassword">Service session password (for context encryption)</label>
+    <input id="serviceSessionPassword" name="serviceSessionPassword" type="text" [formControl]="serviceSessionPassword">
+
+    <br/>
     <label for="requestId">Request id</label>
     <input id="requestId" name="requestId" type="text" [formControl]="requestId">
 
