--- a/technical-embedded-ui/tpp-ui/src/app/account-selector/account-selector.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/account-selector/account-selector.component.html
@@ -1,17 +1,17 @@
 Choose account access
 <mat-radio-group class="account-radio-group" name="accessSelector">
-  <mat-radio-button #dedicated class="account-radio-button" value="dedicated" aria-label="Dedicated accounts access"></mat-radio-button>
+  <mat-radio-button #dedicated class="account-radio-button" [value]="dedicatedChecked.checked" [checked]="dedicatedChecked.checked" aria-label="Dedicated accounts access"></mat-radio-button>
   <div class="nested"
        (click)="!dedicated.checked ? $event.stopPropagation() : null;"
        [class.disabled]="!dedicated.checked">
     General account details access:
     <hr/>
     <div class="nested">
-      <div *ngFor="let template of accounts; let i = index" class="form-row">
+      <div *ngFor="let template of this.aisConsent.access.accounts; let i = index" class="form-row">
         <button mat-icon-button type="button" (click)="removeAccount(accountReference)">
           <mat-icon>remove_circle</mat-icon>
         </button>
-        <app-account-reference #accountReference elemId="{{template.elemId}}" prefix="consent.access.accounts[{{i}}]." [form]="form"></app-account-reference>
+        <app-account-reference #accountReference [(ibanValue)]="aisConsent.access.accounts[i]" [form]="form"></app-account-reference>
       </div>
       <button mat-icon-button type="button" (click)="addAccount()" >
         <mat-icon>add_circle</mat-icon>
@@ -20,11 +20,11 @@ Choose account access
     Account balance access:
     <hr/>
     <div class="nested">
-      <div *ngFor="let template of balances; let i = index" class="form-row">
+      <div *ngFor="let template of this.aisConsent.access.balances; let i = index" class="form-row">
         <button mat-icon-button type="button" (click)="removeBalance(balanceReference)">
           <mat-icon>remove_circle</mat-icon>
         </button>
-        <app-account-reference #balanceReference elemId="{{template.elemId}}" prefix="consent.access.balances[{{i}}]." [form]="form"></app-account-reference>
+        <app-account-reference #balanceReference [(ibanValue)]="aisConsent.access.balances[i]" [form]="form"></app-account-reference>
       </div>
       <button mat-icon-button type="button" (click)="addBalance()">
         <mat-icon>add_circle</mat-icon>
@@ -33,11 +33,11 @@ Choose account access
     Transaction list access:
     <hr/>
     <div class="nested">
-      <div *ngFor="let template of transactions; let i = index" class="form-row">
+      <div *ngFor="let template of this.aisConsent.access.transactions; let i = index" class="form-row">
         <button mat-icon-button type="button" (click)="removeTransaction(txReference)">
           <mat-icon>remove_circle</mat-icon>
         </button>
-        <app-account-reference #txReference elemId="{{template.elemId}}" prefix="consent.access.transactions[{{i}}]." [form]="form"></app-account-reference>
+        <app-account-reference #txReference [(ibanValue)]="aisConsent.access.transactions[i]" [form]="form"></app-account-reference>
       </div>
       <button mat-icon-button type="button" (click)="addTransaction()">
         <mat-icon>add_circle</mat-icon>
@@ -45,10 +45,26 @@ Choose account access
     </div>
   </div>
   <div>
-    <mat-radio-button #all class="account-radio-button" value="all">All accounts access</mat-radio-button>
-    <mat-radio-group class="account-radio-group nested" [disabled]="!all.checked" [formControl]="allAccounts">
-      <mat-radio-button value="allAccounts">All accounts</mat-radio-button>
-      <mat-radio-button value="allAccountsWithBalances">All accounts with balances</mat-radio-button>
+    <mat-radio-button #all class="account-radio-button" [value]="allChecked.checked" [checked]="allChecked.checked">All accounts access</mat-radio-button>
+    <mat-radio-group class="account-radio-group nested" [disabled]="!all.checked" [(ngModel)]="aisConsent.access.availableAccounts">
+      <mat-radio-button value="ALL_ACCOUNTS">All accounts</mat-radio-button>
+      <mat-radio-button value="ALL_ACCOUNTS_WITH_BALANCES">All accounts with balances</mat-radio-button>
     </mat-radio-group>
   </div>
 </mat-radio-group>
+
+<div>
+  <mat-checkbox [(ngModel)]="aisConsent.recurringIndicator">recurringIndicator</mat-checkbox>
+  <br/>
+  <mat-checkbox [(ngModel)]="aisConsent.combinedServiceIndicator">combinedServiceIndicator</mat-checkbox>
+  <br/>
+  <mat-form-field>
+    <input type="text" matInput placeholder="frequencyPerDay" [(ngModel)]="aisConsent.frequencyPerDay">
+  </mat-form-field>
+  <br/>
+  <mat-form-field>
+    <input matInput [matDatepicker]="dp" placeholder="validUntil" [(ngModel)]="aisConsent.validUntil">
+    <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+    <mat-datepicker #dp></mat-datepicker>
+  </mat-form-field>
+</div>
