--- a/technical-embedded-ui/tpp-ui/src/app/dynamic-form/dynamic-form-control.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/dynamic-form/dynamic-form-control.component.html
@@ -12,19 +12,13 @@
       </select>
     </div>
 
-    <three-state-checkbox *ngSwitchCase="'boolean'" [form]="form" controlName="{{control.id}}" label="{{control.message}}"></three-state-checkbox>
+    <app-three-state-checkbox *ngSwitchCase="'boolean'" [form]="form" controlName="{{control.id}}" label="{{control.message}}"></app-three-state-checkbox>
 
     <mat-form-field *ngSwitchCase="'date'">
       <input matInput [matDatepicker]="dp" name="{{control.id}}" placeholder="{{control.message}}" [formControlName]="control.id">
       <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
       <mat-datepicker #dp></mat-datepicker>
     </mat-form-field>
-
-    <div *ngSwitchCase="'accountaccess'">
-      <br><br>
-      <app-account-selector [form]="form"></app-account-selector>
-    </div>
-
   </div>
 
   <div class="errorMessage" *ngIf="!isValid">{{control.id}} is required</div>
