--- a/technical-embedded-ui/tpp-ui/src/app/dynamic-form/dynamic-form.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/dynamic-form/dynamic-form.component.html
@@ -2,12 +2,22 @@
 <div>
   <form ngNoForm method="post" action="{{submissionUri}}">
 
-    <div *ngFor="let template of controlTemplates" class="form-row">
-      <dynamic-form-control [control]="template" [form]="form"></dynamic-form-control>
-    </div>
+    <ng-container *ngIf="aisConsent">
+      <h4>AIS consent</h4>
+      <app-app-ais-consent [aisConsent]="aisConsent" [form]="formStatic"></app-app-ais-consent>
+    </ng-container>
+
+    <hr>
+
+    <ng-container *ngIf="dynamicControlTemplates.length !== 0">
+      <h4>Other consent parameters</h4>
+      <div *ngFor="let template of dynamicControlTemplates" class="form-row">
+        <app-dynamic-form-control [control]="template" [form]="formDynamic"></app-dynamic-form-control>
+      </div>
+    </ng-container>
 
     <div class="form-row">
-      <button type="button" [disabled]="!form.valid" (click)="save()">Supply parameters to embedded authorization</button>
+      <button type="button" (click)="save()">Supply parameters to embedded authorization</button>
     </div>
   </form>
 </div>
